--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
     <title>Слайдер картинок</title>
 </head>
 <body>
     <div class="swiper-container">
         <div class="swiper-wrapper">
-        <div class="swiper-slide"><img src="image1.jpg" alt="Image 1" style="width: 60%; height: auto; display:block; margin:auto;"></div>
-        <div class="swiper-slide"><img src="image2.jpg" alt="Image 2" style="width: 60%; height: auto; display:block; margin:auto;"></div>
-        <div class="swiper-slide"><img src="image3.jpg" alt="Image 3" style="width: 60%; height: auto; display:block; margin:auto;"></div>
+            <div class="swiper-slide"><img src="image1.jpg" alt="Image 1"></div>
+            <div class="swiper-slide"><img src="image2.jpg" alt="Image 2"></div>
+            <div class="swiper-slide"><img src="image3.jpg" alt="Image 3"></div>
         </div>
         <div class="swiper-pagination"></div>
         <div class="swiper-button-prev"></div>
